Assignment1/Part2/ParNumbers.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParNumbers.y
-----------------------------------------------------------------------------

state 24 contains 5 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pExp -> Exp                                 (0)
	%start_pExp1 -> Exp1                               (1)
	%start_pExp2 -> Exp2                               (2)
	%start_pExp3 -> Exp3                               (3)
	Integer -> L_integ                                 (4)
	Exp -> Exp '+' Exp1                                (5)
	Exp -> Exp1                                        (6)
	Exp1 -> Exp1 '*' Exp2                              (7)
	Exp1 -> Exp1 '-' Exp2                              (8)
	Exp1 -> Exp1 '^' Exp2                              (9)
	Exp1 -> Exp1 '/' Exp2                              (10)
	Exp1 -> Exp1 '%' Exp2                              (11)
	Exp1 -> '$' Exp1                                   (12)
	Exp1 -> Exp2                                       (13)
	Exp2 -> Integer                                    (14)
	Exp2 -> 'abs' Exp2                                 (15)
	Exp2 -> '(' Exp ')'                                (16)
	Exp3 -> Integer                                    (17)
	Exp3 -> '-' Exp3                                   (18)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'$'            { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'-'            { PT _ (TS _ 7) }
	'/'            { PT _ (TS _ 8) }
	'^'            { PT _ (TS _ 9) }
	'abs'          { PT _ (TS _ 10) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pExp     rule  0
	%start_pExp1    rule  1
	%start_pExp2    rule  2
	%start_pExp3    rule  3
	Integer         rule  4
	Exp             rules 5, 6
	Exp1            rules 7, 8, 9, 10, 11, 12, 13
	Exp2            rules 14, 15, 16
	Exp3            rules 17, 18

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pExp -> . Exp                                (rule 0)

	'$'            shift, and enter state 15
	'('            shift, and enter state 11
	'abs'          shift, and enter state 12
	L_integ        shift, and enter state 5

	Integer        goto state 9
	Exp            goto state 16
	Exp1           goto state 17
	Exp2           goto state 14

State 1

	%start_pExp1 -> . Exp1                              (rule 1)

	'$'            shift, and enter state 15
	'('            shift, and enter state 11
	'abs'          shift, and enter state 12
	L_integ        shift, and enter state 5

	Integer        goto state 9
	Exp1           goto state 13
	Exp2           goto state 14

State 2

	%start_pExp2 -> . Exp2                              (rule 2)

	'('            shift, and enter state 11
	'abs'          shift, and enter state 12
	L_integ        shift, and enter state 5

	Integer        goto state 9
	Exp2           goto state 10

State 3

	%start_pExp3 -> . Exp3                              (rule 3)

	'-'            shift, and enter state 8
	L_integ        shift, and enter state 5

	Integer        goto state 6
	Exp3           goto state 7

State 4

	Integer -> . L_integ                                (rule 4)

	L_integ        shift, and enter state 5


State 5

	Integer -> L_integ .                                (rule 4)

	'%'            reduce using rule 4
	')'            reduce using rule 4
	'*'            reduce using rule 4
	'+'            reduce using rule 4
	'-'            reduce using rule 4
	'/'            reduce using rule 4
	'^'            reduce using rule 4
	%eof           reduce using rule 4


State 6

	Exp3 -> Integer .                                   (rule 17)

	%eof           reduce using rule 17


State 7

	%start_pExp3 -> Exp3 .                              (rule 3)

	%eof           accept


State 8

	Exp3 -> '-' . Exp3                                  (rule 18)

	'-'            shift, and enter state 8
	L_integ        shift, and enter state 5

	Integer        goto state 6
	Exp3           goto state 27

State 9

	Exp2 -> Integer .                                   (rule 14)

	'%'            reduce using rule 14
	')'            reduce using rule 14
	'*'            reduce using rule 14
	'+'            reduce using rule 14
	'-'            reduce using rule 14
	'/'            reduce using rule 14
	'^'            reduce using rule 14
	%eof           reduce using rule 14


State 10

	%start_pExp2 -> Exp2 .                              (rule 2)

	%eof           accept


State 11

	Exp2 -> '(' . Exp ')'                               (rule 16)

	'$'            shift, and enter state 15
	'('            shift, and enter state 11
	'abs'          shift, and enter state 12
	L_integ        shift, and enter state 5

	Integer        goto state 9
	Exp            goto state 26
	Exp1           goto state 17
	Exp2           goto state 14

State 12

	Exp2 -> 'abs' . Exp2                                (rule 15)

	'('            shift, and enter state 11
	'abs'          shift, and enter state 12
	L_integ        shift, and enter state 5

	Integer        goto state 9
	Exp2           goto state 25

State 13

	%start_pExp1 -> Exp1 .                              (rule 1)
	Exp1 -> Exp1 . '*' Exp2                             (rule 7)
	Exp1 -> Exp1 . '-' Exp2                             (rule 8)
	Exp1 -> Exp1 . '^' Exp2                             (rule 9)
	Exp1 -> Exp1 . '/' Exp2                             (rule 10)
	Exp1 -> Exp1 . '%' Exp2                             (rule 11)

	'%'            shift, and enter state 18
	'*'            shift, and enter state 19
	'-'            shift, and enter state 20
	'/'            shift, and enter state 21
	'^'            shift, and enter state 22
	%eof           accept


State 14

	Exp1 -> Exp2 .                                      (rule 13)

	'%'            reduce using rule 13
	')'            reduce using rule 13
	'*'            reduce using rule 13
	'+'            reduce using rule 13
	'-'            reduce using rule 13
	'/'            reduce using rule 13
	'^'            reduce using rule 13
	%eof           reduce using rule 13


State 15

	Exp1 -> '$' . Exp1                                  (rule 12)

	'$'            shift, and enter state 15
	'('            shift, and enter state 11
	'abs'          shift, and enter state 12
	L_integ        shift, and enter state 5

	Integer        goto state 9
	Exp1           goto state 24
	Exp2           goto state 14

State 16

	%start_pExp -> Exp .                                (rule 0)
	Exp -> Exp . '+' Exp1                               (rule 5)

	'+'            shift, and enter state 23
	%eof           accept


State 17

	Exp -> Exp1 .                                       (rule 6)
	Exp1 -> Exp1 . '*' Exp2                             (rule 7)
	Exp1 -> Exp1 . '-' Exp2                             (rule 8)
	Exp1 -> Exp1 . '^' Exp2                             (rule 9)
	Exp1 -> Exp1 . '/' Exp2                             (rule 10)
	Exp1 -> Exp1 . '%' Exp2                             (rule 11)

	'%'            shift, and enter state 18
	')'            reduce using rule 6
	'*'            shift, and enter state 19
	'+'            reduce using rule 6
	'-'            shift, and enter state 20
	'/'            shift, and enter state 21
	'^'            shift, and enter state 22
	%eof           reduce using rule 6


State 18

	Exp1 -> Exp1 '%' . Exp2                             (rule 11)

	'('            shift, and enter state 11
	'abs'          shift, and enter state 12
	L_integ        shift, and enter state 5

	Integer        goto state 9
	Exp2           goto state 34

State 19

	Exp1 -> Exp1 '*' . Exp2                             (rule 7)

	'('            shift, and enter state 11
	'abs'          shift, and enter state 12
	L_integ        shift, and enter state 5

	Integer        goto state 9
	Exp2           goto state 33

State 20

	Exp1 -> Exp1 '-' . Exp2                             (rule 8)

	'('            shift, and enter state 11
	'abs'          shift, and enter state 12
	L_integ        shift, and enter state 5

	Integer        goto state 9
	Exp2           goto state 32

State 21

	Exp1 -> Exp1 '/' . Exp2                             (rule 10)

	'('            shift, and enter state 11
	'abs'          shift, and enter state 12
	L_integ        shift, and enter state 5

	Integer        goto state 9
	Exp2           goto state 31

State 22

	Exp1 -> Exp1 '^' . Exp2                             (rule 9)

	'('            shift, and enter state 11
	'abs'          shift, and enter state 12
	L_integ        shift, and enter state 5

	Integer        goto state 9
	Exp2           goto state 30

State 23

	Exp -> Exp '+' . Exp1                               (rule 5)

	'$'            shift, and enter state 15
	'('            shift, and enter state 11
	'abs'          shift, and enter state 12
	L_integ        shift, and enter state 5

	Integer        goto state 9
	Exp1           goto state 29
	Exp2           goto state 14

State 24

	Exp1 -> Exp1 . '*' Exp2                             (rule 7)
	Exp1 -> Exp1 . '-' Exp2                             (rule 8)
	Exp1 -> Exp1 . '^' Exp2                             (rule 9)
	Exp1 -> Exp1 . '/' Exp2                             (rule 10)
	Exp1 -> Exp1 . '%' Exp2                             (rule 11)
	Exp1 -> '$' Exp1 .                                  (rule 12)

	'%'            shift, and enter state 18
			(reduce using rule 12)

	')'            reduce using rule 12
	'*'            shift, and enter state 19
			(reduce using rule 12)

	'+'            reduce using rule 12
	'-'            shift, and enter state 20
			(reduce using rule 12)

	'/'            shift, and enter state 21
			(reduce using rule 12)

	'^'            shift, and enter state 22
			(reduce using rule 12)

	%eof           reduce using rule 12


State 25

	Exp2 -> 'abs' Exp2 .                                (rule 15)

	'%'            reduce using rule 15
	')'            reduce using rule 15
	'*'            reduce using rule 15
	'+'            reduce using rule 15
	'-'            reduce using rule 15
	'/'            reduce using rule 15
	'^'            reduce using rule 15
	%eof           reduce using rule 15


State 26

	Exp -> Exp . '+' Exp1                               (rule 5)
	Exp2 -> '(' Exp . ')'                               (rule 16)

	')'            shift, and enter state 28
	'+'            shift, and enter state 23


State 27

	Exp3 -> '-' Exp3 .                                  (rule 18)

	%eof           reduce using rule 18


State 28

	Exp2 -> '(' Exp ')' .                               (rule 16)

	'%'            reduce using rule 16
	')'            reduce using rule 16
	'*'            reduce using rule 16
	'+'            reduce using rule 16
	'-'            reduce using rule 16
	'/'            reduce using rule 16
	'^'            reduce using rule 16
	%eof           reduce using rule 16


State 29

	Exp -> Exp '+' Exp1 .                               (rule 5)
	Exp1 -> Exp1 . '*' Exp2                             (rule 7)
	Exp1 -> Exp1 . '-' Exp2                             (rule 8)
	Exp1 -> Exp1 . '^' Exp2                             (rule 9)
	Exp1 -> Exp1 . '/' Exp2                             (rule 10)
	Exp1 -> Exp1 . '%' Exp2                             (rule 11)

	'%'            shift, and enter state 18
	')'            reduce using rule 5
	'*'            shift, and enter state 19
	'+'            reduce using rule 5
	'-'            shift, and enter state 20
	'/'            shift, and enter state 21
	'^'            shift, and enter state 22
	%eof           reduce using rule 5


State 30

	Exp1 -> Exp1 '^' Exp2 .                             (rule 9)

	'%'            reduce using rule 9
	')'            reduce using rule 9
	'*'            reduce using rule 9
	'+'            reduce using rule 9
	'-'            reduce using rule 9
	'/'            reduce using rule 9
	'^'            reduce using rule 9
	%eof           reduce using rule 9


State 31

	Exp1 -> Exp1 '/' Exp2 .                             (rule 10)

	'%'            reduce using rule 10
	')'            reduce using rule 10
	'*'            reduce using rule 10
	'+'            reduce using rule 10
	'-'            reduce using rule 10
	'/'            reduce using rule 10
	'^'            reduce using rule 10
	%eof           reduce using rule 10


State 32

	Exp1 -> Exp1 '-' Exp2 .                             (rule 8)

	'%'            reduce using rule 8
	')'            reduce using rule 8
	'*'            reduce using rule 8
	'+'            reduce using rule 8
	'-'            reduce using rule 8
	'/'            reduce using rule 8
	'^'            reduce using rule 8
	%eof           reduce using rule 8


State 33

	Exp1 -> Exp1 '*' Exp2 .                             (rule 7)

	'%'            reduce using rule 7
	')'            reduce using rule 7
	'*'            reduce using rule 7
	'+'            reduce using rule 7
	'-'            reduce using rule 7
	'/'            reduce using rule 7
	'^'            reduce using rule 7
	%eof           reduce using rule 7


State 34

	Exp1 -> Exp1 '%' Exp2 .                             (rule 11)

	'%'            reduce using rule 11
	')'            reduce using rule 11
	'*'            reduce using rule 11
	'+'            reduce using rule 11
	'-'            reduce using rule 11
	'/'            reduce using rule 11
	'^'            reduce using rule 11
	%eof           reduce using rule 11


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 19
Number of terminals: 11
Number of non-terminals: 9
Number of states: 35
